--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h4>Perahim Tara</h4>
 	<script type="text/javascript">
 		window.addEventListener("load", () => {
-			window.location.href = 'https://taradesk.github.io';
+			window.location.href = 'https://taradesk.github.io/UAS_PerahimTara.html';
 		});
 	</script>
 </body>
